# jax-fluid-solver

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
notebooks/: 2a Riemann Solvers - JAX.ipynb  2a Riemann Solvers.ipynb  Advection.ipynb  Blast wave CPU.ipynb  Blast wave.ipynb  Kelvin Helmholtz.ipynb  riemann.py
src/solver/: hydro.py  limiters.py  muscl.py  solvers.py  test_solvers.py
tests/: test_hydro.py  test_solvers.py
